# databara-app

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  splash.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: seed-postgres.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splash.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
src/app/: App.tsx  connectionEngines.ts  databaraService.ts  mockData.ts  mockDatabaraService.ts  types.ts  updaterService.ts  workspaceContext.tsx  workspaceCore.ts
src/app/components/dialogs/: AddDatabaseDialog.tsx  ConnectionDialog.tsx  DeleteConnectionDialog.tsx  DeleteServerDialog.tsx  DialogsHost.tsx  DownloadBackupDialog.tsx  LoadConfigDialog.tsx  PasswordConnectionDialog.tsx  RenameServerDialog.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  StorageSettingsTab.tsx  UnsavedTabsDialog.tsx  UpdateDialog.tsx  connectionForm.ts
src/app/components/explorer/: Explorer.tsx  ExplorerFilter.tsx  ExplorerHeader.tsx  ExplorerNode.tsx  ExplorerStats.tsx  ExplorerTree.tsx  TreeIcon.tsx  treeUtils.ts
src/app/editor/: databaraTheme.ts  sqlCompletion.ts
src/app/i18n/: I18nContext.ts  I18nProvider.tsx  de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  pt-BR.ts  ru.ts  translate.ts  zh-CN.ts
src/app/query/: coerceCell.ts  exportCsv.ts  exportJson.ts
src/app/workspace/: WorkspaceApp.tsx  WorkspaceShell.tsx  useGlobalShortcuts.ts  workspaceContext.tsx  workspaceContext.utils.ts  workspaceCore.ts  workspaceSqlTabs.ts
src/lib/: utils.ts
src/splash/: main.ts
src/styles/: globals.css
(+42 files in other folders)
