[package]
name = "databara"
version = "0.1.0"
description = "A modern desktop database manager."
authors = ["Databara"]
edition = "2021"

[lib]
name = "databara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
