[package]
name = "databara"
version = "0.3.0"
description = "A modern desktop database manager."
authors = ["Databara"]
edition = "2021"

[lib]
name = "databara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
