[package]
name = "databara"
version = "1.0.4"
description = "A modern desktop database manager."
authors = ["Databara"]
edition = "2021"

[lib]
name = "databara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tokio-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-uuid-1",
  "with-serde_json-1",
] }
native-tls = "0.2"
postgres-native-tls = "0.5"
chrono = "0.4"
uuid = "1"
rust_decimal = { version = "1", features = ["db-postgres"] }
